--- a/views/grammar.erb
+++ b/views/grammar.erb
@@ -20,15 +20,13 @@ Recuerde que un PEG $G$ es una cuaterna $G =(\Sigma,V,P,S)$.
   $V$ que se denomina <i>expresión de arranque</i>.
 </ol>
 <ol>
-  <li> $\Sigma = \{ ID, NUM, CONST, ".", ",", =, ;, VAR, PROCEDURE, CALL, BEGIN, END, IF, THEN, WHILE, DO, ODD, =, ==, !=, <, <=, >, >=, +, -, *, /, (, ) \}$, 
+  <li> $\Sigma = \{ ID, NUM, CONST, ".", ",", =, ;, VAR, PROCEDURE, CALL, BEGIN, END, IF, THEN, ELSE, WHILE, DO, ODD, =, ==, !=, <, <=, >, >=, +, -, *, /, (, ) \}$, 
   <li> $V = \{ program, block, statement, condition, expression, term, factor \}$  <br />
-  $\{ASSIGN, ADD, MUL, LEFTPAR, RIGHTPAR \} \cup$ <br />
-  $\{ID, NUMBER, \_ \}$
   <li> Reglas de producción:
     <ol>
 	  <li> $program \rightarrow block$ '.'
-      <li> $block \rightarrow$ $($'CONST' $ID$ '=' $NUM$ $($',' $ID$ '=' $NUM$$)$* ';'$)?$  $($'VAR' $ID$ $($',' $ID$$)$* ';'$)?$ $($'PROCEDURE' $ID$ ';' $block$ ';'$)*$ $statement$
-      <li> $statement \rightarrow$ $ID$ '=' $expression \vert$ 'CALL' $ID$ $\vert$ 'BEGIN' $statement$ $($';' $statement)*$ 'END' $\vert$ 'IF' $condition$ 'THEN' $statement$ 'ELSE' $statement$ $\vert$ <br>'IF' $condition$ 'THEN' $statement \vert$ 'WHILE' $condition$ 'DO' $statement$
+      <li> $block \rightarrow$ $($'CONST' $ID$ '=' $NUM$ $($',' $ID$ '=' $NUM$$)$* ';'$)?$  $($'VAR' $ID$ $($',' $ID$$)$* ';'$)?$ $($'PROCEDURE' $ID$ $($'(' $( ID ($ ',' $ID )*)?$ ')'$)?$ ';' $block$ ';'$)*$ $statement$
+      <li> $statement \rightarrow$ $ID$ '=' $expression \vert$ 'CALL' $ID$ $($'(' $( (ID\vert NUM) ($ ',' $(ID\vert NUM) )*)?$ ')'$)?$ $\vert$ 'BEGIN' $statement$ $($';' $statement)*$ 'END' $\vert$ <br>'IF' $condition$ 'THEN' $statement$ 'ELSE' $statement$ $\vert$ 'IF' $condition$ 'THEN' $statement \vert$ 'WHILE' $condition$ 'DO' $statement$
       <li> $condition \rightarrow$ 'ODD' $expression \vert expression$ $($'=='$\vert$'!='$\vert$'<'$\vert$'<='$\vert$'>'$\vert$'>='$)$ $expression$
       <li> $expression \rightarrow$ $($'+'$\vert$'-'$)?$ $term$ $(($'+'$\vert$'-'$)$ $term)*$
       <li> $term \rightarrow factor$ $(($'*'$\vert$'/'$)$ $factor)*$
