--- a/views/index.erb
+++ b/views/index.erb
@@ -15,26 +15,35 @@
     <tr>
       <td>
         <form action="/save" method="post">
-          <textarea id="input" name="input" 
-                    autofocus cols = "40" rows = "4">
+          <br>
+          <textarea id="input" name="input"  autofocus cols = "40" rows = "4">
 <%= source %>
           </textarea>
           <br/>
           <label for="saveas">Save as</label>
-          <input id="saveas" type="text" name="fname" 
+          <input id="saveas" type="text" name="fname"
                  title="name" pattern="\w+" />
         </form>
-      </td>
-      <td><button id="parse" type="button">parse</button></td>
+      <br>
+      <button id="parse" type="button">parse</button>
     </tr>
   </table>
   </p>
   <div class="output">
     <pre>
-<span id="output"></span> <!-- Output goes here! --> 
+<span id="output"></span> <!-- Output goes here! -->
     </pre>
   </div>
 </div>
+
+<!-- Script para el CodeMirror -->
+<script>
+    // Generar un editor CodeMirror a partir del textarea INPUT (se borra y se reemplaza).
+    var editor = CodeMirror.fromTextArea(document.getElementById("input"), {
+      lineNumbers: true,
+      viewportMargin: Infinity
+    });
+</script>
 
 <script src="pl0.js"></script>
 <script src="main.js"></script>
