--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,18 +13,16 @@
   </head>
   <body>
     <nav>
-      <ul>
+      <ul class="programs">
         <li> <a href="/grammar"  title="Grammar" <%=current?("/grammar")%>>Grammar</a> </li>
         <li> <a href="/"  title="Home" <%=current?("/")%>>Home</a> </li>
-        <li> <a href="http://campusvirtual.ull.es/1314/course/view.php?id=1104"  title="PL-UDV">PL-UDV</a> </li>
-        <li> <a href="https://github.com/crguezl/pegjscalc"  title="Repo">Repo</a> </li>
+        <li> <a href="/test"  title="Pruebas" <%=current?("/test")%>>Pruebas</a> </li>
+        <li> <a href="https://github.com/alu0100693096/pegjscalc"  title="Repo">Repo</a> </li>
         <li> <a href="http://en.wikipedia.org/wiki/Recursive_descent_parser#Example_parser"   title="Wikipedia">PL0</a> </li>
         <li> <a href="http://pegjs.majda.cz/"  title="PEG.js">PEG.js</a> </li>
         <li> <a href="http://datamapper.org/"  title="DataMapper">DataMapper</a> </li>
         <li> <a href="http://sass-lang.com/"  title="Sass">Sass</a> </li>
-        <li> <a href="http://crguezl.github.io/pl-html/"  title="PLGH">PL-GH</a> </li>
         <li> <a href="http://docs.mathjax.org/en/latest/start.html"  title="MathJax">MathJax</a> </li>
-        <li> <a href="https://plus.google.com/u/0/+CasianoRodriguezLeon/" title="crguezl">crguezl</a> </li>
       </ul>
     </nav>
     <%= yield %>
