--- a/views/styles.scss
+++ b/views/styles.scss
@@ -6,11 +6,13 @@ $main-font: Helvetica, Arial, sans-serif;
 
 body {
   font-family: $main-font;
+  background-image:url('background.jpg');
 }
 
 h1 {
-  color: $red;
+  color: $blue;
   font: 32px/1 $main-font;
+  text-align: center;
 }
 
 header h1 {
@@ -84,29 +86,76 @@ nav a.current {
   }
 }
 
-.loadfile {
-  background-color: $black;
+label {
+color: #151515;
+font-weight: bold;
+width: 100px;
+padding: 5px;
+}
+
+div.loadfile {
+  background:linear-gradient(135deg, #4c4c4c 0%,#666666 0%,#595959 0%,#474747 60%,#000000 74%,#000000 84%,#000000 97%,#1c1c1c 99%,#111111 100%,#111111 100%,#2b2b2b 100%,#000000 100%,#131313 100%,#111111 101%); 
   border-radius: 15px;
   border: 2px solid #DDD;
   line-height: 80px;
-  
-  //width: 75%;
-  height: 20px;
-  padding: 5px;
 
-  button, input {
-    color: $black;
+  text-align: left;
+ 
+  height: 25px;
+  padding: 8px;
+  
+  .lfile{
+    position: absolute;
+    left: 72px;
+    top: 120px;
+    font-weight: bolder;
+    z-index: 3;
+  }
+
+  input.hidden.file {
     float: left;
     list-style: none;
-
+    position: relative;
     display: inline;
     text-align: center;
     font-weight: bolder;
+    opacity: 0;
+    z-index: 2;
+  }
+  button, input.styled.file {
+    position: absolute;
+    left: 20px;
+    background-color:#f9f9f9;
+    border-top-left-radius:15px;
+    border-top-right-radius:15px;
+    color: $black;
+    list-style: none;
+    z-index: 1;
+    display: inline;
+    box-shadow:inset 0px 1px 0px 0px #ffffff;
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#e9e9e9');
+    border-bottom-left-radius:5px;
+    border-bottom-right-radius:5px;
   }
    
   button:hover, input:hover {
-    cursor:pointer;
+    //cursor:pointer;
   }
+}
+
+.textar {
+  width: 500px;
+  padding: 15px;
+  border-color: gray;
+  border-style: dotted;
+  border-width: thin;
+  border-radius: 5px;
+  padding: 3px;
+}
+
+.programs {
+  border-radius: 15px;
+  background: linear-gradient(135deg, #4c4c4c 0%,#666666 0%,#595959 0%,#474747 60%,#000000 74%,#000000 84%,#000000 97%,#1c1c1c 99%,#111111 100%,#111111 100%,#2b2b2b 100%,#000000 100%,#131313 100%,#111111 101%); 
 }
    
 .error {
@@ -116,4 +165,15 @@ nav a.current {
 
 .centered {
   text-align: center;
+}
+
+input[type=text] {
+    border: 5px solid white;
+    border-radius: 5px;
+    box-shadow: 
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1); 
+    padding: 5px;
+    background: rgba(255,255,255,0.5);
+    margin: 0 0 10px 0;
 }
